[package]
name = "boxing_ring_editor"
version = "0.4.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", default-features = true, features = ["bevy_winit"] }
bevy_egui = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
crossbeam-channel = "0.5"

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
panic = "abort"
